@@ -628,9 +628,10 @@ namespace MeGUI
                 if (type.outputType is VideoType)
                 {
                     // see http://forum.doom9.org/showthread.php?p=1243370#post1243370
-                    if ((mainForm.Settings.ForceRawAVCExtension) && (video.Settings.EncoderType == VideoEncoderType.X264))
-                         video.Output = Path.ChangeExtension(video.Output, ".264");
-                    else video.Output = Path.ChangeExtension(video.Output, type.outputType.Extension);
+                    if (video.Settings.EncoderType == VideoEncoderType.X264 && (mainForm.Settings.ForceRawAVCExtension || type.outputType.ContainerType == ContainerType.MP4))
+                        video.Output = Path.ChangeExtension(video.Output, ".264");
+                    else 
+                        video.Output = Path.ChangeExtension(video.Output, type.outputType.Extension);
                     video.VideoType = type;
                 }
                 if (type.outputType is AudioType)
